--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,33 @@
 plugins {
     id 'java'
+    id 'application'
 }
+
+configurations {
+    testCompile
+}
+
 
 group 'fractals.main'
 version '1.0-SNAPSHOT'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testCompile group: 'junit', name: 'junit', version: '5.9.0'
 }
 
 test {
     useJUnitPlatform()
 }
+
+mainClassName = 'fractals.main.Runner'
